Update azure-pipelines.yml for Azure Pipelines2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 pool:
   name: Default
   vmImage: 'windows-latest'
-  demands: Limit -equals DisableParallel
+  demands: Limit -equals DisAbleParallel
 
 variables:
   solution: '**/*.sln'
