--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,15 +53,16 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: DotNetCoreCLI@2
-  displayName: 'Publish the project - Release'
-  inputs:
-    command: 'publish'
-    projects: '**/*.csproj'
-    publishWebProjects: false
-    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
-    zipAfterPublish: true
+    
+- template: templates/build.yml
+  parameters:
+  buildConfiguration: 'Debug'
+  
+- template: templates/build.yml
+  parameters:
+  buildConfiguration: 'Release'
 
+  
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   condition: succeeded()
