--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,10 @@ trigger:
 - '*'
 
 pool:
-  vmImage: 'ubuntu-20.04'
-  demands:
+  name: Default
+  vmImage: 'windows-latest'
+  demands: 
+  - Limit -equals DisAbleParallel
   - npm
 
 variables:
