--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,12 @@ trigger:
 - '*'
 
 pool:
-  vmImage: 'ubuntu-20.04'
-  demands:
+  name: Default
+  vmImage: 'windows-latest'
+  demands: 
+  - Limit -equals DisAbleParallel
   - npm
+
 
 variables:
   buildConfiguration: 'Release'
@@ -25,8 +28,13 @@ steps:
 - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
   displayName: 'Compile Sass assets'
 
-- task: gulp@1
-  displayName: 'Run gulp tasks'
+- task: gulp@0
+  inputs:
+    gulpFile: 'gulpfile.js'
+    targets: 
+    workingDirectory: '$(Build.SourcesDirectory)'
+    gulpjs: 'node_modules/gulp/bin/gulp.js'
+    enableCodeCoverage: false
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
